--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" rel="stylesheet">
     <!--Шрифти беремо із Гугл Фонтс-->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body> 
-    <header>
+    <header class="page-heder">
+        <div class="container page-heder-container">
  <!--логотип-->
     <nav class="site-nav">
         <a href="./index.html" class="link logo"> <span class="part-of-word">Web</span>Studio</a> 
@@ -24,21 +26,26 @@
 
 <!--електронна адреса та телефон-->
 </nav>
-<address>
-    <ul class="list">
+<address class="address-main">
+    <ul class="list address"> 
         <li><a href="mailto:info@devstudio.com" class="link contact-mail-phone">info@devstudio.com</a></li>
         <li><a href="tel:+110001111111" class="link contact-mail-phone">+11 (000) 111-11-11</a></li>
 </ul>
 </address>
+</div>
 </header>
+
  <main>
     <!--Герой-->
 <section class="hero">
+    <div class="container">
     <h1 class="hero">Effective Solutions for Your Business</h1> 
     <button class="button" type="button" >Order Service</button>
+</div>
 </section>  
    <!--переваги-->
 <section class="second">
+    <div class="container">
     <h2></h2>
     <ul class="list">
         <li><h3 class="photo-header">Strategy</h3>
@@ -54,40 +61,47 @@
     <li><h3 class="photo-header">Technologies</h3>
     <p class="main-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
 </li>
-    </ul>  
+    </ul>
+</div>  
 </section>
 <!--Що ми робимо-->
 <section class="third">
+    <div class="container">
     <h2 class="second-head">What are we doing</h2>
     <ul class="list">
     <li><img src="./images/Monitor1.jpg" alt="Monitorw" width=360></li>
     <li><img src="./images/selltelephone1.jpg" alt="selltelephone" width="360"></li>
     <li><img src="./images/work1.jpg" alt="work" width=360></li> 
     </ul>
+</div>
 </section>
 <!--Наша команда-->
 <section class="fourth">
+    <div class="container">
     <h2 class="second-head">Our Team</h2>
-    <ul class="list">
-        <li><img src="./images/marc1.jpg" alt="Marc" width=264>
+    <ul class="list team-list">
+        <li class="team-card"><img src="./images/marc1.jpg" alt="Marc" width=264>
         <h3 class="photo-header">Mark Guerrero</h3>
         <p class="main-text">Designer</p></li>
-        <li><img src="./images/tom1.jpg" alt="Tom" width=264>
+        <li class="team-card"><img src="./images/tom1.jpg" alt="Tom" width=264>
         <h3 class="photo-header">Tom Ford</h3>
         <p class="main-text">Frontend Developer</p></li>
-        <li><img src="./images/camila1.jpg" alt="Camila" width=264>
+        <li class="team-card"><img src="./images/camila1.jpg" alt="Camila" width=264>
         <h3 class="photo-header">Camila Garcia</h3>
         <p class="main-text">Marketing</p></li>
-        <li><img src="./images/daniel1.jpg" alt="Daniel" width=264>
+        <li class="team-card"><img src="./images/daniel1.jpg" alt="Daniel" width=264>
         <h3 class="photo-header">Daniel Wilson</h3>
         <p class="main-text">UI Designer</p></li>
     </ul>
+</div>
 </section>
 </main>
 <!--Футер-->
 <footer class="footer">
+    <div class="container">
     <a href="./index.html" class="link logo-foot"> <span class="part-of-word-foot">Web</span>Studio</a> 
     <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</div>
 </footer>
 </body>
 </html>
