--- a/index.html
+++ b/index.html
@@ -39,59 +39,70 @@
     <!--Герой-->
 <section class="hero">
     <div class="container">
-    <h1 class="hero">Effective Solutions for Your Business</h1> 
+    <h1 class="hero-one">Effective Solutions for Your Business</h1> 
     <button class="button" type="button" >Order Service</button>
 </div>
 </section>  
    <!--переваги-->
 <section class="second">
-    <div class="container">
-    <h2></h2>
-    <ul class="list">
-        <li><h3 class="photo-header">Strategy</h3>
+    <div class="container section-padding-top">
+    <h2></h2> 
+    <ul class="list second-list">
+        <li class="second-list-item"><h3 class="photo-header">Strategy</h3>
         <p class="main-text">Our goal is to identify the business
             problem to walk away with the perfect and creative solution. </p>
         </li>
-        <li><h3 class="photo-header">Punctuality</h3>
+        <li class="second-list-item"><h3 class="photo-header">Punctuality</h3>
         <p class="main-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
-    <li><h3 class="photo-header">Diligence</h3>
+    <li class="second-list-item"><h3 class="photo-header">Diligence</h3>
         <p class="main-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
-    <li><h3 class="photo-header">Technologies</h3>
+    <li class="second-list-item"><h3 class="photo-header">Technologies</h3>
     <p class="main-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
 </li>
     </ul>
-</div>  
+</div> 
 </section>
 <!--Що ми робимо-->
-<section class="third">
+<section class="third section-padding">
     <div class="container">
     <h2 class="second-head">What are we doing</h2>
-    <ul class="list">
-    <li><img src="./images/Monitor1.jpg" alt="Monitorw" width=360></li>
-    <li><img src="./images/selltelephone1.jpg" alt="selltelephone" width="360"></li>
-    <li><img src="./images/work1.jpg" alt="work" width=360></li> 
+    <ul class="list third-list">
+    <li class="third-list-item"><img src="./images/Monitor1.jpg" alt="Monitorw" width=360></li>
+    <li class="third-list-item"><img src="./images/selltelephone1.jpg" alt="selltelephone" width="360"></li>
+    <li class="third-list-item"><img src="./images/work1.jpg" alt="work" width=360></li> 
     </ul>
 </div>
 </section>
 <!--Наша команда-->
-<section class="fourth">
+<section class="fourth section-padding">
     <div class="container">
     <h2 class="second-head">Our Team</h2>
     <ul class="list team-list">
-        <li class="team-card"><img src="./images/marc1.jpg" alt="Marc" width=264>
+        <li class="team-card"><img src="./images/marc1.jpg" alt="Marc" width=264>   
+        <div class="second-card-heder">
         <h3 class="photo-header">Mark Guerrero</h3>
-        <p class="main-text">Designer</p></li>
+        <p class="main-text">Designer</p>
+    </div>
+</li>
         <li class="team-card"><img src="./images/tom1.jpg" alt="Tom" width=264>
+        <div class="second-card-heder">
         <h3 class="photo-header">Tom Ford</h3>
-        <p class="main-text">Frontend Developer</p></li>
+        <p class="main-text">Frontend Developer</p>
+    </div>
+</li>
         <li class="team-card"><img src="./images/camila1.jpg" alt="Camila" width=264>
+        <div class="second-card-heder">
         <h3 class="photo-header">Camila Garcia</h3>
-        <p class="main-text">Marketing</p></li>
+        <p class="main-text">Marketing</p>
+    </div>
+</li>
         <li class="team-card"><img src="./images/daniel1.jpg" alt="Daniel" width=264>
-        <h3 class="photo-header">Daniel Wilson</h3>
-        <p class="main-text">UI Designer</p></li>
+        <div class="second-card-heder"><h3 class="photo-header">Daniel Wilson</h3>
+        <p class="main-text">UI Designer</p>
+    </div>
+</li>
     </ul>
 </div>
 </section>
