--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
  <main>
     <!--Герой-->
 <section class="hero">
-    <div class="container">
+    <div class="container-hero">
     <h1 class="hero-one">Effective Solutions for Your Business</h1> 
     <button class="button" type="button" >Order Service</button>
-</div>
-</section>  
+</div></section> 
    <!--переваги-->
 <section class="second">
     <div class="container section-padding-top">
@@ -99,7 +98,8 @@
     </div>
 </li>
         <li class="team-card"><img src="./images/daniel1.jpg" alt="Daniel" width=264>
-        <div class="second-card-heder"><h3 class="photo-header">Daniel Wilson</h3>
+        <div class="second-card-heder">
+        <h3 class="photo-header">Daniel Wilson</h3>
         <p class="main-text">UI Designer</p>
     </div>
 </li>
