--- a/portfolio.html
+++ b/portfolio.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" rel="stylesheet">
-
     <!--Шрифти беремо із Гугл Фонтс-->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body> 
-    <header>
+    <header class="page-heder">
+        <div class="container page-heder-container">
  <!--логотип-->
     <nav class="site-nav">
         <a href="./index.html" class="link logo"> <span class="part-of-word">Web</span>Studio</a> 
@@ -26,85 +26,91 @@
 
 <!--електронна адреса та телефон-->
 </nav>
-<address>
-    <ul class="list">
+<address class="address-main">
+    <ul class="list address"> 
         <li><a href="mailto:info@devstudio.com" class="link contact-mail-phone">info@devstudio.com</a></li>
         <li><a href="tel:+110001111111" class="link contact-mail-phone">+11 (000) 111-11-11</a></li>
 </ul>
 </address>
+</div>
 </header>
     <main>
     <section>
+        <div class="container">
         <h1></h1>
-    <ul class="list">
-        <li>
+    <ul class="list portfolio-btn-container">
+        <li class="menu-portfolio-btn">
            <button class="nav-btn" type="button">All</button>
         </li>
-        <li>
+        <li class="menu-portfolio-btn">
             <button class="nav-btn" type="button">Web Site</button>
         </li>
-        <li>
+        <li class="menu-portfolio-btn">
             <button class="nav-btn" type="button">App</button>
         </li>
-        <li>
+        <li class="menu-portfolio-btn">
             <button class="nav-btn" type="button">Design</button>
         </li>
-        <li>
+        <li class="menu-portfolio-btn">
             <button class="nav-btn" type="button">Marketing</button>
         </li>
     </ul>
-    <ul class="list">
-    <li>
+    <ul class="list team-list section-padding-portfolio">
+    <li class="portfolio-card">
         <img src="./images/banking1.jpg" alt="banking app interface concept" width="360">
-    <h2 class="photo-header">Banking App Interface Concept</h2>
-    <p class="main-text">App</p>
+        <div class="portfolio-card-heder">
+        <h2 class="photo-header">Banking App Interface Concept</h2>
+    <p class="main-text">App</p></div>
 </li>
-    <li>
+    <li class="portfolio-card">
         <img src="./images/payment1.jpg" alt="cashless payment" width="360">
-    <h2 class="photo-header">Cashless Payment</h2>
-    <p class="main-text">Marketing</p>
+    <div class="portfolio-card-heder"><h2 class="photo-header">Cashless Payment</h2>
+    <p class="main-text">Marketing</p></div>
 </li>
-    <li>
+    <li class="portfolio-card">
         <img src="./images/meditation1.jpg" alt="meditaion app" width="360">
-    <h2 class="photo-header">Meditaion App</h2>
-    <p class="main-text">App</p>
+    <div class="portfolio-card-heder"><h2 class="photo-header">Meditaion App</h2>
+    <p class="main-text">App</p></div>
 </li>
-    <li>
+    <li class="portfolio-card">
         <img src="./images/taxi1.jpg" alt="taxi service" width="360">
-    <h2 class="photo-header">Taxi Service</h2>
-    <p class="main-text">Marketing</p>
+    <div class="portfolio-card-heder"><h2 class="photo-header">Taxi Service</h2>
+    <p class="main-text">Marketing</p></div>
 </li>
-    <li>
+    <li class="portfolio-card">
         <img src="./images/screen1.jpg" alt="screen illustrations" width="360">
-    <h2 class="photo-header">Screen Illustrations</h2>
-    <p class="main-text">Design</p>
+    <div class="portfolio-card-heder"><h2 class="photo-header">Screen Illustrations</h2>
+    <p class="main-text">Design</p></div>
 </li>
-    <li>
+    <li class="portfolio-card">
         <img src="./images/courses1.jpg" alt="online courses" width="360">
-    <h2 class="photo-header">Online Courses</h2>
-    <p class="main-text">Marketing</p>
+    <div class="portfolio-card-heder"><h2 class="photo-header">Online Courses</h2>
+    <p class="main-text">Marketing</p></div>
 </li>
-    <li>
+    <li class="portfolio-card">
         <img src="./images/instagram1.jpg" alt="instagram stories concept" width="360">
-    <h2 class="photo-header">Instagram Stories Concept</h2>
-    <p class="main-text">Design</p>
+    <div class="sportfolio-card-heder"><h2 class="photo-header">Instagram Stories Concept</h2>
+    <p class="main-text">Design</p></div>
 </li>
-    <li>
+    <li class="portfolio-card">
         <img src="./images/food1.jpg" alt="organic food" width="360">
-    <h2 class="photo-header">Organic Food</h2>
-    <p class="main-text">Web Site</p>
+    <div class="portfolio-card-heder"><h2 class="photo-header">Organic Food</h2>
+    <p class="main-text">Web Site</p></div>
 </li>
-    <li>
+    <li class="portfolio-card">
         <img src="./images/coffee1.jpg" alt="fresh coffee" width="360">
-    <h2 class="photo-header">Fresh Coffee</h2>
-    <p class="main-text">Web Site</p>
+    <div class="portfolio-card-heder"><h2 class="photo-header">Fresh Coffee</h2>
+    <p class="main-text">Web Site</p></div>
 </li>
 </ul>
+</div>
 </section>
 </main>
 <footer class="footer">
+    <div class="container">
     <a href="./index.html" class="link logo-foot"> <span class="part-of-word-foot">Web</span>Studio</a> 
     <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</div>
 </footer>
 </body>
 </html>
