--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,8 @@
 </nav>
 <address class="address-main">
     <ul class="list address"> 
-        <li><a href="mailto:info@devstudio.com" class="link contact-mail-phone">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111" class="link contact-mail-phone">+11 (000) 111-11-11</a></li>
+        <li class="contact"><a href="mailto:info@devstudio.com" class="link contact-mail-phone">info@devstudio.com</a></li>
+        <li class="contact"><a href="tel:+110001111111" class="link contact-mail-phone">+11 (000) 111-11-11</a></li>
 </ul>
 </address>
 </div>
@@ -88,8 +88,8 @@
     <p class="main-text">Marketing</p></div>
 </li>
     <li class="portfolio-card">
-        <img src="./images/instagram1.jpg" alt="instagram stories concept" width="360">
-    <div class="sportfolio-card-heder"><h2 class="photo-header">Instagram Stories Concept</h2>
+        <img src="./images/instagram2.jpg" alt="instagram stories concept" width="360">
+    <div class="portfolio-card-heder"><h2 class="photo-header">Instagram Stories Concept</h2>
     <p class="main-text">Design</p></div>
 </li>
     <li class="portfolio-card">
