--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </nav>
 <address class="address-main">
     <ul class="list address"> 
-        <li><a href="mailto:info@devstudio.com" class="link contact-mail-phone">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111" class="link contact-mail-phone">+11 (000) 111-11-11</a></li>
+        <li class="contact"><a href="mailto:info@devstudio.com" class="link contact-mail-phone">info@devstudio.com</a></li>
+        <li class="contact"><a href="tel:+110001111111" class="link contact-mail-phone">+11 (000) 111-11-11</a></li>
 </ul>
 </address>
 </div>
