--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
 </div>
 </header>
     <main>
-    <section>
+    <section class="section-padding-portfolio">
         <div class="container">
         <h1></h1>
     <ul class="list portfolio-btn-container">
@@ -55,7 +55,7 @@
             <button class="nav-btn" type="button">Marketing</button>
         </li>
     </ul>
-    <ul class="list team-list section-padding-portfolio">
+    <ul class="list team-list">
     <li class="portfolio-card">
         <img src="./images/banking1.jpg" alt="banking app interface concept" width="360">
         <div class="portfolio-card-heder">
