--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
  <main>
     <!--Герой-->
 <section class="hero">
-    <div class="container-hero">
+    <div class="container">
     <h1 class="hero-one">Effective Solutions for Your Business</h1> 
     <button class="button" type="button" >Order Service</button>
 </div></section> 
    <!--переваги-->
 <section class="second">
-    <div class="container section-padding-top">
+    <div class="container">
     <h2></h2> 
     <ul class="list second-list">
         <li class="second-list-item"><h3 class="photo-header">Strategy</h3>
